--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,3 +1,10 @@
 <div class="start-screen">
     <img src="/assets/img/cards/startbox.jpg" alt="">
+
+    <div class="start-label">
+       
+        <img (click)="newGame()" src="/assets/img/cards/label.png" alt="">
+        
+    </div>
+
 </div>
